[project]
name = "streamdiffusion"
version = "0.1.1"
description = "real-time interactive image generation pipeline"
readme = "README.md"
license = {text = "Apache 2.0 License"}
authors = [
    {name = "Aki, kizamimi, ddPn08, Verb, ramune, teftef6220, Tonimono, Chenfeng Xu, Ararat with the help of all our contributors", email = "cumulokyoukai@gmail.com"}
]
keywords = ["deep learning", "diffusion", "pytorch", "stable diffusion", "audioldm", "streamdiffusion", "real-time"]
requires-python = ">=3.10.0"
dependencies = [
    "torch",
    "fire",
    "omegaconf",
    "diffusers>0.24",
    "transformers>=4.41.0",
    "accelerate",
    "huggingface_hub",
    "peft>=0.17.0",
    "pywin32; sys_platform == 'win32'",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "mss>=10.1.0",
    "av>=16.0.1",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.10.0",
    "controlnet-aux>=0.0.10",
    "fastapi>=0.123.7",
    "uvicorn>=0.38.0",
    "compel==2.0.2",
    "markdown2>=2.5.4",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
xformers = [
    "xformers",
]
torch = [
    "torch",
    "accelerate",
]
tensorrt = [
    "protobuf==3.20.2",
    "cuda-python; sys_platform != 'darwin'",
    "onnx==1.15.0; sys_platform != 'darwin'",
    "onnxruntime==1.16.3; sys_platform != 'darwin'",
    "colored",
]
dev = [
    "xformers",
    "torch",
    "accelerate",
    "protobuf==3.20.2",
    "cuda-python; sys_platform != 'darwin'",
    "onnx==1.15.0; sys_platform != 'darwin'",
    "onnxruntime==1.16.3; sys_platform != 'darwin'",
    "colored",
]

[project.urls]
Homepage = "https://github.com/cumulo-autumn/StreamDiffusion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamdiffusion"]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F403", "F405", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["streamdiffusion"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
